--- a/ressources/style.css
+++ b/ressources/style.css
@@ -1,4 +1,201 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root{
+    --ion-color-primary: #B85DEF;
+}
+
 body {
     margin: 0;
     padding: 0;
+}
+
+#slides-container{
+    height: 90vh;
+    display: flex;
+    align-items: center;
+}
+
+ion-card{
+    height: 30em;
+    width: 20em;
+    background-image: url('./images/banff-national-park.jpg');
+    background-position: center;
+    background-size: auto auto;
+    box-shadow: 0px 3px 25px rgb(133, 133, 133);
+}
+
+ion-card-title{
+    color: white;
+    text-align: left;
+    width: 65%;
+}
+
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    box-shadow: 0px 0px 8px rgb(230, 230, 230);
+}
+
+ion-icon{
+    width: 70px;
+    height: 20px;
+}
+
+a{
+    text-decoration: none;
+}
+
+ion-chip{
+    transform: scale(0.8);
+    background-color: #B85DEF;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bolder;
+}
+
+ion-card-header{
+    display: flex;
+    align-items: flex-end;
+    height: 85%;
+}
+
+.ion-card-bottom{
+    display: flex;
+    justify-content: right;
+    margin-right: 10%;
+}
+
+#map-container{
+    display: flex;
+    justify-content: center;
+    width: auto;
+    padding:10%;
+    height: 90vh;
+}
+
+#map{
+    width: 100%;
+    border-radius: 20px;
+    box-shadow: 0px 3px 25px rgb(133, 133, 133);
+
+}
+
+ion-fab-button{
+    --background-activated: #8E67FD;
+}
+
+ion-searchbar{
+    margin-right: 8%;
+}
+
+
+/* CONNEXION */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+#main {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+}
+
+#sign {
+	width: 70%;
+	font-family: Comfortaa;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 36px;
+	line-height: 40px;
+	display: flex;
+	align-items: center;
+	letter-spacing: -0.015em;
+	color: #000000;
+
+
+}
+
+#container {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 70%;
+	height: 70%;
+}
+
+form {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	align-content: center;
+	justify-content: center;
+	/* padding: 0 10% 0 10%; */
+}
+
+input[type=email], input[type=password] {
+    padding: 15px;
+    border-radius: 10px;
+    border: none;
+	width: 100%;
+	height: 3.5em;
+	margin-top: 5%;
+    box-shadow: 0px 1px 20px rgb(203, 203, 203);
+
+}
+
+#champ-submit{
+	display: flex;
+	width: 100%;
+	height: 30%;
+	align-items: flex-end;
+    justify-content: center;
+    text-align: center;
+    color: white;
+}
+
+#champ-submit ion-button{
+	width: 100%;
+	height: 3.5em;
+	border: none;
+	color: white;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: 900;
+	font-size: 13px;
+	line-height: 15px;
+	letter-spacing: 0.050em;
+	text-transform: uppercase;
+    box-shadow: 0px 2px 20px rgb(203, 203, 203);
+
+}
+
+
+
+#call-to-action{
+	text-align: center;
+	font-style: italic;
+	font-size: 14px;
+}
+
+#call-to-action a{
+	text-decoration: none;
+	color: rgb(48, 48, 48);
+}
+
+@media (min-width:  1000px) {
+	form{
+		width: 50%;
+	}
+
+	#sign{
+		width: 35%;
+	}
 }
