--- a/ressources/style.css
+++ b/ressources/style.css
@@ -74,7 +74,7 @@ ion-card-header{
     display: flex;
     justify-content: center;
     width: auto;
-    padding:10%;
+    padding:1.5em;
     height: 90vh;
 }
 
@@ -82,6 +82,66 @@ ion-card-header{
     width: 100%;
     border-radius: 20px;
     box-shadow: 0px 3px 25px rgb(133, 133, 133);
+
+}
+
+#test{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-end;
+    width: 75%;
+    height: 80vh;
+    /* border: solid 1px green; */
+    position: absolute;
+}
+
+#test ion-button{
+    margin-top: 1.5em;
+    border-radius: 10px;
+    box-shadow: 0px 3px 25px rgb(133, 133, 133);
+}
+
+#details{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 170px;
+    height: 60px;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 0px 3px 25px rgb(133, 133, 133);
+}
+
+#details-left{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 70%;
+    height: 100%;
+    /* border: solid 1px red; */
+    padding: 3%;
+}
+
+#details-left img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+
+#details-right{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+    /* border: solid 1px red; */
+}
+
+#details-right h1{
+    font-size: 18px;
 
 }
 
